asociaciones tipo lazy y eager loading

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /JavaPersistenceApi/HolaMundo-jpa/target/
 /Leccion3/sga-jee-web/target/
 /Leccio4/sga-jee-web/target/
+/Leccion5/sga-jee-web/target/
