--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /Leccion5/sga-jee-web/target/
 /Leccion6/sga-jee-web/target/
 /Leccion7/sga-jee-web/target/
+/Leccion8/sga-jee-web/target/
+/Leccion8/sga-jee/target/
