Client WEB Services con java

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /Leccion10/sumaws/target/
 /Leccion10/ClienteSumaWS/target/
 /Leccion10/sga-jee-web/target/
+/Leccion10/ClienteSGAWs/target/
+/Leccion11/sga-jee-web/target/
