Cliente REST Web Services con Java EE 8

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /Leccion10/sga-jee-web/target/
 /Leccion10/ClienteSGAWs/target/
 /Leccion11/sga-jee-web/target/
+/Leccion11/ClienteSgaRestWs/target/
