--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /Leccion10/ClienteSGAWs/target/
 /Leccion11/sga-jee-web/target/
 /Leccion11/ClienteSgaRestWs/target/
+/Leccion12/sga-jee-web/target/
