Cliente JAX-RS con Seguridad en Java EE 8

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /Leccion11/sga-jee-web/target/
 /Leccion11/ClienteSgaRestWs/target/
 /Leccion12/sga-jee-web/target/
+/Leccion12/ClienteEJBSeguridad/target/
+/Leccion12/ClienteSgaRestWs/target/
