Ejercicio: Cliente JAX-WS con Seguridad en Java EE 8

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /Leccion12/sga-jee-web/target/
 /Leccion12/ClienteEJBSeguridad/target/
 /Leccion12/ClienteSgaRestWs/target/
+/Leccion12/ClienteSGAWs/target/
