--- a/Leccion10/sga-jee-web/src/main/webapp/WEB-INF/web.xml
+++ b/Leccion10/sga-jee-web/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>mx.com.gm.sga.servicio</param-value>
+            <param-value>arg.com.gm.sga.servicio</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
