--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /Leccion12/ClienteEJBSeguridad/target/
 /Leccion12/ClienteSgaRestWs/target/
 /Leccion12/ClienteSGAWs/target/
+/Leccion10/ClienteSgaWs2/target/
