--- a/Leccion10/sga-jee-web/pom.xml
+++ b/Leccion10/sga-jee-web/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>ar.com.mycompany</groupId>
+    <groupId>mx.com.gm.sga</groupId>
     <artifactId>sga-jee-web</artifactId>
     <version>1.0</version>
     <packaging>war</packaging>
-    <name>sga-jee-web-1.0</name>
+    <name>sga-jee-web</name>
     
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -16,7 +16,7 @@
         <jakartaee>8.0</jakartaee>
     </properties>
     
- <dependencies>
+    <dependencies>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
@@ -57,11 +57,6 @@
             <groupId>javax.jws</groupId>
             <artifactId>javax.jws-api</artifactId>
             <version>1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.core</groupId>
-            <artifactId>jersey-client</artifactId>
-            <version>2.29</version>
         </dependency>
     </dependencies>
     
