--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /Leccion12/ClienteSgaRestWs/target/
 /Leccion12/ClienteSGAWs/target/
 /Leccion10/ClienteSgaWs2/target/
+/Leccion12/ClienteSgaWs2/target/
