--- a/Leccion12/ClienteSgaWs2/pom.xml
+++ b/Leccion12/ClienteSgaWs2/pom.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>ar.com.gm.sga</groupId>
-    <artifactId>ClienteSGAWs</artifactId>
+    <groupId>arg.com.gm.sga</groupId>
+    <artifactId>ClienteSgaWs</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
-    <properties>
+   <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <exec.mainClass>ClienteSumaWS</exec.mainClass>
     </properties>
-   <dependencies>
+    <dependencies>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
@@ -42,7 +41,7 @@
                         </goals>
                         <configuration>
                             <wsdlUrls>
-                                <wsdlUrl>http://localhost:8080/PersonaImplService/PersonaImpl?wsdl</wsdlUrl>
+                                <wsdlUrl>http://localhost:8080/PersonaServiceImplService/PersonaServiceImpl?wsdl</wsdlUrl>
                             </wsdlUrls>
                             <packageName>clientews.servicio</packageName>
                             <sourceDestDir>${basedir}/src/main/java</sourceDestDir>
